--- a/app/src/main/res/values/attr.xml
+++ b/app/src/main/res/values/attr.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <declare-styleable name="GameBoard">
+    <declare-styleable name="GameBoardView">
         <attr name="board_line_width" format="integer"/>
         <attr name="board_line_color" format="color"/>
         <attr name="ship_cell_color" format="color"/>
+        <attr name="ship_dead_cell_color" format="color"/>
         <attr name="text_color" format="color"/>
         <attr name="cell_color" format="color"/>
         <attr name="text_size" format="dimension"/>
